--- a/vm/Makefile
+++ b/vm/Makefile
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 CFLAGS := -Wall -Werror -Iinc -O2 -g
-LDLIBS := -lm
+LDLIBS := -lm -lrt
 
 ifeq ($(COVERAGE),1)
 CFLAGS += -fprofile-arcs -ftest-coverage
